--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^19.3.46",
+    "@syncfusion/ej2-react-dropdowns": "^19.3.47",
     "@syncfusion/ej2-react-inputs": "^19.3.47",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
