--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filepond-plugin-image-preview": "^4.6.10",
     "firebase": "^9.0.2",
     "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
