--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/luxon": "^2.16.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.9",
+    "@mui/x-date-pickers": "^5.0.4",
     "@syncfusion/ej2-react-calendars": "^19.3.46",
     "@syncfusion/ej2-react-dropdowns": "^19.3.47",
     "@syncfusion/ej2-react-inputs": "^19.3.47",
@@ -16,9 +21,11 @@
     "firebase": "^9.6.6",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
+    "luxon": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.2"
