--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
