before updating Router

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "http://sojip.github.io/wannakilos"
+  "homepage": "https://sojip.github.io/wannakilos/"
 }
