--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "luxon": "^2.5.0",
+    "material-ui-confirm": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-filepond": "^7.1.1",
