--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@testing-library/user-event": "^12.8.3",
     "filepond": "^4.29.1",
     "filepond-plugin-file-encode": "^2.1.10",
+    "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.10",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
+    "filepond-plugin-pdf-preview": "^1.0.4",
     "firebase": "^9.6.6",
     "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
