--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -29,7 +30,7 @@
     "luxon": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-filepond": "^7.1.1",
+    "react-filepond": "^7.1.2",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.0",
