--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^9.1.1",
+    "styled-components": "^6.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -64,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.4",
