updated all files with typescript support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    // "outDir": "./public/",
-    // "sourceMap": true,
+    "outDir": "./public/",
+    "sourceMap": true,
     "baseUrl": "src",
     "lib": ["es6", "dom"],
     "noImplicitAny": true,
@@ -9,10 +9,10 @@
     "strictNullChecks": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    // "module": "es6",
+    "allowJs": true,
     "jsx": "react"
-    // "target": "es5",
-    // "allowJs": true
+    // "module": "es6",
+    // "target": "es5"
   },
   "include": ["./src"]
 }
