--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@date-io/luxon": "^2.16.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@firebase/firestore-types": "^3.0.0",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.11.0",
