--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "gh-pages": "^4.0.0",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
-  },
+    "typescript": "^5.1.6"  },
   "homepage": "https://sojip.github.io/wannakilos/"
 }
