--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
-    "jsx": "react"
+    "jsx": "react",
+    "checkJs": true
     // "module": "es6",
     // "target": "es5"
   },
