--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/luxon": "^2.16.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@firebase/firestore": "^4.3.2",
     "@firebase/firestore-types": "^3.0.0",
     "@mdi/js": "^7.1.96",
     "@mdi/react": "^1.6.1",
@@ -15,12 +16,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^29.5.2",
     "@types/luxon": "^3.3.0",
-    "@types/node": "^20.4.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@types/react-router-dom": "^5.3.3",
     "filepond": "^4.29.1",
     "filepond-plugin-file-encode": "^2.1.10",
     "filepond-plugin-file-validate-type": "^1.2.8",
@@ -68,10 +64,16 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.5.7",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.34",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^4.0.0",
     "source-map-loader": "^4.0.1",
     "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"  },
+    "typescript": "^5.1.6"
+  },
   "homepage": "https://sojip.github.io/wannakilos/"
 }
