--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "allowJs": true,
     "jsx": "react",
     "checkJs": true
-    // "module": "es6",
+    // "module": "es6"
     // "target": "es5"
   },
   "include": ["./src"]
